# battlepong-game-server

./: .bowerrc  .gitignore  CMakeLists.txt  multipong.conf  multipong.py  multipongApplication.py  requirements.txt  runpongbot.py
handlers/: __init__.py  deleteHandler.py  gameHandler.py  gameState.py  handlerOutput.py  joinGameHandler.py  leaveGameHandler.py  paddleHandler.py  playerHandler.py  startHandler.py  stopHandler.py  websocketHandler.py
libmpong/: CMakeLists.txt
libmpong/include/: ball.h
libmpong/src/: CMakeLists.txt  ball.cpp
mpong/: MpongGame.py  Player.py  controlUnit.py  database.py  masterGameBuilder.py  model.py
pongbot/: pongbot.py  pongsession.py
server/: __init__.py  gameState.py  paddleHandler.py
static/: index.html
static/app/: app.config.js  app.routing.js
static/app/components/battlePong/: battlepong.controller.js  battlepong.service.js
static/app/components/battlepong/: battlepong.controller.js  battlepong.directive.js  battlepong.service.js  battlepong.view.html
static/app/components/game/: game.controller.js  game.service.js  game.view.html
static/app/components/home/: home.controller.js  home.name.directive.js  home.name.template.html  home.register.directive.js  home.register.template.html  home.view.html
static/app/components/lobby/: create-game-form.directive.js  create-game-form.template.html  lobby.controller.js  lobby.service.js  lobby.view.html
static/app/components/mpong/: mpong.js  (+1 more)
static/assets/css/: site.css
static/demos/app/: index.html
static/mpong/: game-grid-control.html  game-grid-row.html  index.html  loading.html  lobby.html  mpong.html  register.html  site.html
static/mpong/css/: site.css
static/mpong/js/: game-controller.js  game-grid-controller.js  game-loading-controller.js  game-service.js  game.js  http-method-service.js  lobby-controller.js  lobby-service.js  lobby.js  mpong.js  mpong.json  player-controller.js  player-service.js  register-controller.js  site-controller.js  url-service.js
static/mpong/json/: games.json
static/mpong/lib/: angular-modal-service.min.js
static/tests/mpong/: mpong.html  webgl-utils.js
test/: CMakeLists.txt  testHandlers.py  test_multipongApp.py
test/libmpong/: CMakeLists.txt  ball_test.cpp
(+20 files in other folders)
